@@ -285,6 +285,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA 450i   (EXPERIMENTAL)
        Canon PIXMA 455i   (EXPERIMENTAL)
        Canon PIXMA 550i   (EXPERIMENTAL)
+       Canon PIXMA 850i   (EXPERIMENTAL)
        Canon PIXMA 6100i  (EXPERIMENTAL)
        Canon PIXMA 6500i  (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
